[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["oshita-n <oshita-n@whispon.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
amplify = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
